фикс фона .advantage-img

--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,9 @@
                     ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
                 </div>
               </div>
-              <div class="advantage__img advantage__img--city"></div>
+              <div class="advantage__img-wrapper">
+                <div class="advantage__img advantage__img--city"></div>
+              </div>
               <div class="advantage__details detail">
                 <div class="detail__item detail__item--house">
                   <div class="detail__icon detail__icon--house">
@@ -189,7 +191,9 @@
                     пройти!<br> Если вы осмелитесь, конечно</p>
                 </div>
               </div>
-              <div class="advantage__img advantage__img--bridge"></div>
+              <div class="advantage__img-wrapper">
+                <div class="advantage__img advantage__img--bridge"></div>
+              </div>
             </li>
             <!-- /.advantages__item -->
             <li class="advantages__item advantage">
