обернул фотографии в ссылки

--- a/source/photo.html
+++ b/source/photo.html
@@ -76,20 +76,22 @@
 
             <ul class="gallery__list">
               <li class="gallery__item gallery__item--main photo-card">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1200px)"
-                    srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
-                  <source media="(min-width: 1200px)"
-                    srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
-                  <source type="image/webp" media="(min-width: 768px)"
-                    srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
-                  <source media="(min-width: 768px)"
-                    srcset="img/photo-sunset-tablet@2x.jpg 2x, img/photo-sunset-tablet@1x.jpg 1x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
-                  <img src="img/photo-sunset-mobile@1x.jpg" alt="Фото" class="photo-card__img photo-card__img--main"
-                    srcset="img/photo-sunset-mobile@2x.jpg 2x">
-                </picture>
+                <a class="photo-card__link" href="#">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)"
+                      srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                    <source type="image/webp" media="(min-width: 768px)"
+                      srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-sunset-tablet@2x.jpg 2x, img/photo-sunset-tablet@1x.jpg 1x">
+                    <source type="image/webp" media="(max-width: 767px)"
+                      srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
+                    <img src="img/photo-sunset-mobile@1x.jpg" alt="Фото" class="photo-card__img photo-card__img--main"
+                      srcset="img/photo-sunset-mobile@2x.jpg 2x">
+                  </picture>
+                </a>
                 <div class="photo-card__info photo-card__info--sunset card-info">
                   <div class="card-info__description">
                     <h3 class="card-info__title">Неродные просторы</h3>
@@ -109,20 +111,22 @@
                 </div>
               </li>
               <li class="gallery__item photo-card">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1200px)"
-                    srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
-                  <source media="(min-width: 1200px)"
-                    srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
-                  <source type="image/webp" media="(min-width: 768px)"
-                    srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
-                  <source media="(min-width: 768px)"
-                    srcset="img/photo-cactus-tablet@2x.jpg 2x, img/photo-cactus-tablet@1x.jpg 1x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
-                  <img src="img/photo-cactus-mobile@1x.jpg" alt="Фото" class="photo-card__img"
-                    srcset="img/photo-cactus-mobile@2x.jpg 2x">
-                </picture>
+                <a class="photo-card__link" href="#">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)"
+                      srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                    <source type="image/webp" media="(min-width: 768px)"
+                      srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-cactus-tablet@2x.jpg 2x, img/photo-cactus-tablet@1x.jpg 1x">
+                    <source type="image/webp" media="(max-width: 767px)"
+                      srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
+                    <img src="img/photo-cactus-mobile@1x.jpg" alt="Фото" class="photo-card__img"
+                      srcset="img/photo-cactus-mobile@2x.jpg 2x">
+                  </picture>
+                </a>
                 <div class="photo-card__info photo-card__info--cactus card-info">
                   <div class="card-info__description">
                     <h3 class="card-info__title">Местная растительность</h3>
@@ -142,20 +146,22 @@
                 </div>
               </li>
               <li class="gallery__item photo-card">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1200px)"
-                    srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
-                  <source media="(min-width: 1200px)"
-                    srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
-                  <source type="image/webp" media="(min-width: 768px)"
-                    srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
-                  <source media="(min-width: 768px)"
-                    srcset="img/photo-roads-tablet@2x.jpg 2x, img/photo-roads-tablet@1x.jpg 1x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
-                  <img src="img/photo-roads-mobile@1x.jpg" alt="Фото" class="photo-card__img"
-                    srcset="img/photo-roads-mobile@2x.jpg 2x">
-                </picture>
+                <a class="photo-card__link" href="#">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)"
+                      srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                    <source type="image/webp" media="(min-width: 768px)"
+                      srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-roads-tablet@2x.jpg 2x, img/photo-roads-tablet@1x.jpg 1x">
+                    <source type="image/webp" media="(max-width: 767px)"
+                      srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
+                    <img src="img/photo-roads-mobile@1x.jpg" alt="Фото" class="photo-card__img"
+                      srcset="img/photo-roads-mobile@2x.jpg 2x">
+                  </picture>
+                </a>
                 <div class="photo-card__info photo-card__info--roads card-info">
                   <div class="card-info__description">
                     <h3 class="card-info__title">Дорога на север</h3>
@@ -175,20 +181,22 @@
                 </div>
               </li>
               <li class="gallery__item photo-card">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1200px)"
-                    srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
-                  <source media="(min-width: 1200px)"
-                    srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
-                  <source type="image/webp" media="(min-width: 768px)"
-                    srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
-                  <source media="(min-width: 768px)"
-                    srcset="img/photo-bridge-tablet@2x.jpg 2x, img/photo-bridge-tablet@1x.jpg 1x">
-                  <source type="image/webp" media="(max-width: 767px)"
-                    srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
-                  <img src="img/photo-bridge-mobile@1x.jpg" alt="Фото" class="photo-card__img"
-                    srcset="img/photo-bridge-mobile@2x.jpg 2x">
-                </picture>
+                <a class="photo-card__link" href="#">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)"
+                      srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                    <source type="image/webp" media="(min-width: 768px)"
+                      srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-bridge-tablet@2x.jpg 2x, img/photo-bridge-tablet@1x.jpg 1x">
+                    <source type="image/webp" media="(max-width: 767px)"
+                      srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
+                    <img src="img/photo-bridge-mobile@1x.jpg" alt="Фото" class="photo-card__img"
+                      srcset="img/photo-bridge-mobile@2x.jpg 2x">
+                  </picture>
+                </a>
                 <div class="photo-card__info photo-card__info--bridge card-info">
                   <div class="card-info__description">
                     <h3 class="card-info__title">Мост дьявола</h3>
