--- a/source/index.html
+++ b/source/index.html
@@ -251,7 +251,7 @@
         <div class="map">
           <div class="map__content">
             <!-- <div class="map__img"></div> -->
-            <iframe class="map__img"
+            <iframe class="map__img" loading="lazy" 
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d785248.9056486546!2d-112.03394715805742!3d34.8732120072326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1600027664640!5m2!1sru!2sru"
               width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
               tabindex="0"></iframe>
